Cleaned up code comments, updated requirements.txt, and modified .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
+story.json
+__pycache__/
+*.pyc
+*.pyo
+venv/
+.env/
+.DS_Store
+.idea/
+.vscode/
+test_outputs/
+*.log
 .env
 myenv/
-images/
-story.json
-image_texts.json
-image
+.python-version
